# askgit

./: .gitignore  README.md  agent.py  pyproject.toml  requirements.txt
src/: github.py  tools.py
tests/: test_agent.py
